a fix for news banner covering main headline

--- a/src/css/sections/_home.responsive.scss
+++ b/src/css/sections/_home.responsive.scss
@@ -205,6 +205,12 @@ body {
 }
 
 @media (--desktop-m) {  
+  .hero-content {
+    .news {
+      bottom: 4rem;
+    }
+  }
+
   .hero-carousel {
     .slide-inner {
       .main-content {
